Fixes layout on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -278,7 +278,6 @@ hr {
 
 @media (max-width: 30em) {
   .social-icons {
-    float: left;
     padding-top: 0px;
   }
   .menu-content {
